style: Fix lecture thumbnail wrap

--- a/react-noteverytime/src/components/lectureThumbnail/lectureThumbnail.scss
+++ b/react-noteverytime/src/components/lectureThumbnail/lectureThumbnail.scss
@@ -79,6 +79,7 @@
 
       .preview-createdAt {
         min-width: 2.25rem;
+        white-space: nowrap;
       }
     }
   }
